--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                          <input name="email" type="email" class="md:col-span-1 w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]" placeholder="Email (Optional)">
                          <input name="mobile" type="tel" class="md:col-span-1 w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]" placeholder="Mobile (Optional)">
                          <select name="ticketType" class="w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]">
-                             <option value="Student">Student Pass (₹850)</option>
-                             <option value="Outsider">Outsider Pass (₹900)</option>
+                             <option value="Student">Student Pass (₹800)</option>
+                             <option value="Outsider">Outsider Pass (₹850)</option>
                          </select>
                          <select name="paymentType" class="w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]">
                               <option value="Cash">Cash Payment</option>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="text-center">
                             <p id="modalTicketIdStub" class="text-sm font-semibold tracking-widest text-gray-400 break-all"></p>
-                            <img src="https://i.postimg.cc/5Np2vjZT/image.png" alt="Raasta Nagpur Logo" class="h-8 opacity-70 mt-2 mx-auto">
+                            <img src="https://i.postimg.cc/FKz4NnMB/TOQUO.png" alt="TOQUO Logo" class="h-8 opacity-70 mt-2 mx-auto">
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
             appId: "1:480552824914:web:d67e8c9f208c67ac7fef8b",
             measurementId: "G-RLPWDK8MR2"
         };
-        const TICKET_PRICES = { 'Student': 850, 'Outsider': 900 };
+        const TICKET_PRICES = { 'Student': 800, 'Outsider': 850 };
         const CORRECT_PASSWORD = "1234"; 
         
         let db, currentAttendee = null;
@@ -385,7 +385,7 @@
         function showAttendeeDetails(attendee) {
             currentAttendee = attendee;
             const ticketType = attendee.ticketType || 'Student';
-            const price = TICKET_PRICES[ticketType] || 850;
+            const price = TICKET_PRICES[ticketType] || 800;
             
             document.getElementById('modalTicketName').textContent = attendee.name ?? 'N/A';
             document.getElementById('modalTicketTypeDetail').textContent = `Freshers Pass (${ticketType})`;
