--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                          <input name="email" type="email" class="md:col-span-1 w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]" placeholder="Email (Optional)">
                          <input name="mobile" type="tel" class="md:col-span-1 w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]" placeholder="Mobile (Optional)">
                          <select name="ticketType" class="w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]">
-                             <option value="Student">Student Pass (₹800)</option>
+                             <option value="Student">Student Pass (₹750)</option>
                              <option value="Outsider">Outsider Pass (₹850)</option>
                          </select>
                          <select name="paymentType" class="w-full px-4 py-2 text-white bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[var(--primary-green)]">
@@ -217,7 +217,7 @@
                         </div>
                         <div class="text-center">
                             <p id="modalTicketIdStub" class="text-sm font-semibold tracking-widest text-gray-400 break-all"></p>
-                            <img src="https://i.postimg.cc/FKz4NnMB/TOQUO.png" alt="TOQUO Logo" class="h-8 opacity-70 mt-2 mx-auto">
+                            <img src="https://i.postimg.cc/7YhY1f5f/1759790431389.png" alt="CYCLONE Logo" class="h-8 opacity-70 mt-2 mx-auto">
                         </div>
                     </div>
                 </div>
@@ -576,3 +576,4 @@
 
 </body>
 </html>
+
